@startuml
skinparam defaultFontName Monospaced
skinparam linetype ortho

entity "utilisateur" as Utilisateur {
  +id                : INT <<PK, AUTO_INCREMENT>>
  --
  email              : VARCHAR(255) <<NOT NULL, UNIQUE>>
  mot_de_passe_hash  : VARCHAR(255) <<NOT NULL>>
  nom_profil         : VARCHAR(50)  <<NOT NULL, UNIQUE>>
  date_creation      : TIMESTAMP     <<NOT NULL, DEFAULT CURRENT_TIMESTAMP>>
  role_id            : INT           <<FK, NOT NULL>>
}

entity "role" as Role {
  +id           : INT <<PK, AUTO_INCREMENT>>
  --
  nom           : VARCHAR(50)  <<NOT NULL, UNIQUE>>
  date_creation : TIMESTAMP    <<NOT NULL, DEFAULT CURRENT_TIMESTAMP>>
}

entity "collection" as Collection {
  +id             : INT <<PK, AUTO_INCREMENT>>
  --
  date_creation   : TIMESTAMP <<NOT NULL, DEFAULT CURRENT_TIMESTAMP>>
  utilisateur_id  : INT       <<FK, NOT NULL>>
}

entity "livre" as Livre {
  +isbn           : VARCHAR(17) <<PK>>
  +collection_id  : INT         <<PK, FK, NOT NULL>>
  --
  date_ajout      : TIMESTAMP <<NOT NULL, DEFAULT CURRENT_TIMESTAMP>>
  is_visible      : BOOLEAN   <<NOT NULL, DEFAULT TRUE>>
}

' Relations
Role ||--o{ Utilisateur : "possède"
Utilisateur ||--o{ Collection : "possède"
Collection ||--o{ Livre : "contient"

@enduml
